--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive",
-    "docs": "jsdoc -c jsdoc.conf.json"
+    "docs": "jsdoc -c .jsdoc.json",
+    "lint": "eslint .",
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "yargs": "^6.5.0"
   },
   "devDependencies": {
+    "eslint": "^3.12.2",
     "jsdoc": "^3.4.3",
     "mocha": "^3.2.0"
   }
