--- a/src/tree/package.json
+++ b/src/tree/package.json
@@ -20,5 +20,8 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "buckets-js": "^1.98.2"
+  }
 }
