--- a/src/tree/package.json
+++ b/src/tree/package.json
@@ -20,8 +20,5 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "private": true,
-  "dependencies": {
-    "buckets-js": "^1.98.2"
-  }
+  "private": true
 }
