--- a/src/configurator/package.json
+++ b/src/configurator/package.json
@@ -22,9 +22,8 @@
   },
   "private": "true",
   "dependencies": {
-    "@inexor-game/tree": "file:///Users/berger/workspace/flex/src/tree",
     "buckets-js": "^1.98.2",
     "glob": "^7.1.1",
-    "toml-node": "0.0.1"
+    "toml": "^2.3.1"
   }
 }
