--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "yargs": "^6.5.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.12.2",
     "jsdoc": "^3.4.3",
     "mocha": "^3.2.0"
