--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scripting environment for Inexor.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive",
+    "test": "mocha $(find . -not -iwholename '*node_modules*' -iwholename '*test*' -name '*.js')",
     "docs": "jsdoc -c .jsdoc.json",
     "lint": "eslint ."
   },
