--- a/src/manager/package.json
+++ b/src/manager/package.json
@@ -12,5 +12,8 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "portastic": "^1.0.1"
+  }
 }
