--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@inexor-game/flex",
   "version": "0.9.0",
   "description": "Scripting environment for Inexor.",
-  "main": "index.js",
   "scripts": {
+    "start": "node server/index.js --",
     "test": "mocha $(find . -not -iwholename '*node_modules*' -iwholename '*test*' -name '*.js')",
     "docs": "jsdoc -c .jsdoc.json",
     "lint": "eslint ."
@@ -28,7 +28,9 @@
   "dependencies": {
     "@inexor-game/configurator": "file:src/configurator",
     "@inexor-game/connector": "file:src/connector",
+    "@inexor-game/manager": "file:src/manager",
     "@inexor-game/tree": "file:src/tree",
+    "body-parser": "^1.15.2",
     "bunyan": "^1.8.5",
     "express": "^4.14.0",
     "yargs": "^6.5.0"
