--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0",
   "description": "Scripting environment for Inexor.",
   "scripts": {
-    "start": "node server/index.js log --port 31416",
+    "start": "node server/index.js log --port 31416 && ./flex initialize",
     "test": "mocha $(find . -not -iwholename '*node_modules*' -iwholename '*test*' -name '*.js')",
     "docs": "jsdoc -c .jsdoc.json",
     "lint": "eslint ."
@@ -26,13 +26,15 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
+    "@inexor-game/api": "file:server/api",
     "@inexor-game/configurator": "file:src/configurator",
     "@inexor-game/connector": "file:src/connector",
     "@inexor-game/manager": "file:src/manager",
     "@inexor-game/tree": "file:src/tree",
-    "body-parser": "^1.15.2",
     "bunyan": "^1.8.5",
     "express": "^4.14.0",
+    "nock": "^9.0.2",
+    "node-mocks-http": "^1.5.5",
     "yargs": "^6.5.0"
   },
   "devDependencies": {
