--- a/server/api/package.json
+++ b/server/api/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/inexor-game/code/issues"
   },
-  "homepage": "https://github.com/inexor-game/flex#readme"
+  "homepage": "https://github.com/inexor-game/flex#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2"
+  }
 }
