Bootstrap @inexor-game/plugins as an independant API member.

--- a/server/api/package.json
+++ b/server/api/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/inexor-game/flex#readme",
   "dependencies": {
-    "body-parser": "^1.15.2"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0"
   }
 }
