--- a/plugins/package.json
+++ b/plugins/package.json
@@ -22,6 +22,8 @@
   },
   "private": true,
   "dependencies": {
-    "electrolyte": "^0.4.0"
+    "body-parser": "^1.15.2",
+    "electrolyte": "^0.4.0",
+    "express": "^4.14.0"
   }
 }
