--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@inexor-game/plugins": "file:plugins",
     "@inexor-game/tree": "file:src/tree",
     "bunyan": "^1.8.5",
+    "bunyan-debug-stream": "^1.0.7",
     "express": "^4.14.0",
     "nock": "^9.0.2",
     "yargs": "^6.5.0"
