--- a/package.json
+++ b/package.json
@@ -27,13 +27,12 @@
   },
   "dependencies": {
     "@inexor-game/api": "file:server/api",
-    "@inexor-game/configurator": "file:src/configurator",
     "@inexor-game/connector": "file:src/connector",
+    "@inexor-game/logger": "file:server/util/logger",
     "@inexor-game/manager": "file:src/manager",
+    "@inexor-game/path": "file:server/util/path",
     "@inexor-game/plugins": "file:plugins",
     "@inexor-game/tree": "file:src/tree",
-    "bunyan": "^1.8.5",
-    "bunyan-debug-stream": "^1.0.7",
     "express": "^4.14.0",
     "nock": "^9.0.2",
     "yargs": "^6.5.0"
