--- a/plugins/package.json
+++ b/plugins/package.json
@@ -23,6 +23,7 @@
   "private": true,
   "dependencies": {
     "@inexor-plugins/cfgreader": "file:cfgreader",
+    "@inexor-plugins/configurator": "file:configurator",
     "body-parser": "^1.15.2",
     "express": "^4.14.0"
   }
