--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@inexor-game/path": "file:server/util/path",
     "@inexor-game/plugins": "file:plugins",
     "@inexor-game/tree": "file:src/tree",
+    "@inexor-game/treeclient": "file:src/treeclient",
     "express": "^4.14.0",
     "nock": "^9.0.2",
     "yargs": "^6.5.0"
