--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@inexor-game/treeclient": "file:src/treeclient",
     "express": "^4.14.0",
     "nock": "^9.0.2",
+    "node-rest-client": "^2.0.1",
     "yargs": "^6.5.0"
   },
   "devDependencies": {
