Moved command line arguments to cli folder + debugging

--- a/src/treeclient/package.json
+++ b/src/treeclient/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@inexor-game/tree-client",
+  "name": "@inexor-game/treeclient",
   "version": "1.0.0",
-  "description": "The tree-client allows access to a local or remote Inexor Tree.",
+  "description": "The tree client allows access to a local or remote Inexor Tree.",
   "main": "index.js",
   "repository": {
     "type": "git",
