--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.14.0",
     "nock": "^9.0.2",
     "node-rest-client": "^2.0.1",
+    "npid": "^0.4.0",
     "yargs": "^6.5.0"
   },
   "devDependencies": {
