If Inexor Flex is not running start Inexor Flex first
First it checks if the PID file exists. If no PID file is present Inexor
Flex is started as detached child process.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nock": "^9.0.2",
     "node-rest-client": "^2.0.1",
     "npid": "^0.4.0",
+    "wait-on": "^2.0.1",
     "yargs": "^6.5.0"
   },
   "devDependencies": {
