--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "chai-iterator": "^1.1.1",
     "eslint": "^3.12.2",
     "jsdoc": "^3.4.3",
     "minami": "^1.1.1",
