Respect XDG paths for media repositories and other improvements
Improvements:

* Respect XDG paths for media repositories
* Simplified the media path handling
* Added scanAll() method
* Automatically create default path for storing media repositories
* Automatically fetch the core media repository if not available

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-rest-client": "^2.0.1",
     "npid": "^0.4.0",
     "wait-on": "^2.0.1",
+    "xdg-basedir": "^2.0.0",
     "yargs": "^6.5.0"
   },
   "devDependencies": {
