--- a/src/treeclient/package.json
+++ b/src/treeclient/package.json
@@ -21,5 +21,7 @@
     "node": ">=6.9.1"
   },
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "node-rest-client": "^2.0.1"
+  }
 }
