--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^3.12.2",
     "jsdoc": "^3.4.3",
     "minami": "^1.1.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "mocha-junit-reporter": "^1.13.0"
   }
 }
