--- a/config/instances.toml
+++ b/config/instances.toml
@@ -8,8 +8,8 @@ name = "Default Inexor Server"
 description = "Badly Configurated Server Inc. proudly presents your first Inexor Server"
 autostart = false
 
-[instances.31417]
+[instances.31415]
 type = "client"
 name = "Default Inexor Client"
 description = "The default Inexor Client"
-autostart = false
+autostart = true
