Many improvements and checks for instance manager and instance connector

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@inexor-game/connector": "file:src/connector",
     "@inexor-game/context": "file:src/context",
     "@inexor-game/logger": "file:server/util/logger",
-    "@inexor-game/manager": "file:src/manager",
+    "@inexor-game/instances": "file:src/instances",
     "@inexor-game/media": "file:src/media",
     "@inexor-game/path": "file:server/util/path",
     "@inexor-game/plugins": "file:plugins",
