Added interactive shell for Inexor Flex

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@inexor-game/api": "file:server/api",
     "@inexor-game/connector": "file:src/connector",
     "@inexor-game/context": "file:src/context",
-    "@inexor-game/logger": "file:server/util/logger",
     "@inexor-game/instances": "file:src/instances",
+    "@inexor-game/logger": "file:server/util/logger",
     "@inexor-game/media": "file:src/media",
     "@inexor-game/path": "file:server/util/path",
     "@inexor-game/plugins": "file:plugins",
@@ -40,6 +40,7 @@
     "@inexor-game/types": "file:src/types",
     "circular-json": "^0.3.1",
     "express": "^4.14.0",
+    "figlet": "^1.2.0",
     "npid": "^0.4.0",
     "prettyjson": "^1.2.1",
     "wait-on": "^2.0.1",
