--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "interface"]
 	path = interface
 	url = https://github.com/Fohlen/interface.git
+[submodule "interfaces/ui-console"]
+	path = interfaces/ui-console
+	url = git@github.com:inexor-game/ui-console.git
