Added submodule for the HUD interface

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "interfaces/ui-client-interface"]
 	path = interfaces/ui-client-interface
 	url = https://github.com/inexor-game/ui-client-interface.git
+[submodule "interfaces/ui-client-hud"]
+	path = interfaces/ui-client-hud
+	url = https://github.com/inexor-game/ui-client-hud.git
