--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "figlet": "^1.2.0",
     "npid": "^0.4.0",
     "prettyjson": "^1.2.1",
+    "segfault-handler": "^1.0.0",
     "tomlify": "^0.2.0",
     "wait-on": "^2.0.1",
     "xdg-basedir": "^2.0.0",
