--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "docs": "jsdoc -c .jsdoc.json",
     "lint": "eslint .",
     "dev": "node server/index.js --level=debug",
-    "postinstall": "npm install @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/media @inexor-game/path @inexor-game/plugins @inexor-game/tree @inexor-game/treeclient @inexor-game/types"
+    "postinstall": "npm install @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/entities @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/media @inexor-game/path @inexor-game/tree @inexor-game/treeclient @inexor-game/types"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "@inexor-game/api": "file:server/api",
     "@inexor-game/console": "file:src/console",
     "@inexor-game/context": "file:src/context",
+    "@inexor-game/entities": "file:src/entities",
     "@inexor-game/instances": "file:src/instances",
     "@inexor-game/interfaces": "file:src/interfaces",
     "@inexor-game/logger": "file:server/util/logger",
