--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "tomlify": "^0.2.0",
     "wait-on": "^2.0.2",
     "xdg-basedir": "^3.0.0",
-    "yargs": "^7.0.2"
+    "yargs": "^7.0.2",
+    "toml": "^2.3.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
