--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "test": "mocha $(find . -not -iwholename '*node_modules*' -iwholename '*test*' -name '*.js')",
     "docs": "jsdoc -c .jsdoc.json",
     "lint": "eslint .",
-    "dev": "node server/index.js --level=debug",
-    "postinstall": "npm install @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/entities @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/media @inexor-game/path @inexor-game/tree @inexor-game/treeclient @inexor-game/types"
+    "dev": "node server/index.js --profile=devenv",
+    "server": "node server/index.js --profile=server",
+    "shell": "node inexor shell",
+    "postinstall": "npm install @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/entities @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/media @inexor-game/path @inexor-game/profiles @inexor-game/tree @inexor-game/treeclient @inexor-game/types"
   },
   "repository": {
     "type": "git",
@@ -39,6 +41,7 @@
     "@inexor-game/logger": "file:server/util/logger",
     "@inexor-game/media": "file:src/media",
     "@inexor-game/path": "file:server/util/path",
+    "@inexor-game/profiles": "file:src/profiles",
     "@inexor-game/tree": "file:src/tree",
     "@inexor-game/treeclient": "file:src/treeclient",
     "@inexor-game/types": "file:src/types",
