--- a/config/client/interfaces.toml
+++ b/config/client/interfaces.toml
@@ -13,3 +13,9 @@ name = "Inexor Web Interface"
 description = "The web user interface used in the Inexor Core Client."
 path = client-interface
 repository = https://github.com/inexor-game/ui-client-interface.git
+
+[interfaces.ui-flex]
+name = "The Flex user interface"
+description = "The flex user interface used for managing flex"
+path = ui-flex
+repository = https://github.com/inexor-game/ui-flex.git
