--- a/config/server/interfaces.toml
+++ b/config/server/interfaces.toml
@@ -7,3 +7,9 @@ name = "Inexor Web Console"
 description = "The Inexor Web Console is a web interface for the Inexor Flex command line API. Within the game client the Inexor Web Console rendered on a transparent layer in front of the game."
 path = console
 repository = https://github.com/inexor-game/ui-console.git
+
+[interfaces.ui-flex]
+name = "The Flex user interface"
+description = "The flex user interface used for managing flex"
+path = ui-flex
+repository = https://github.com/inexor-game/ui-flex.git
