--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@inexor-game/types": "file:src/types",
     "@inexor-ui/flex": "file:interfaces/ui-flex",
     "circular-json": "^0.3.1",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "figlet": "^1.2.0",
     "npid": "^0.4.0",
