--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0",
   "description": "Scripting environment for Inexor.",
   "scripts": {
-    "postinstall": "npm install @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/entities @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/logging @inexor-game/media @inexor-game/path @inexor-game/profiles @inexor-game/tree @inexor-game/treeclient @inexor-game/types",
+    "postinstall": "npm update @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/entities @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/logging @inexor-game/media @inexor-game/path @inexor-game/profiles @inexor-game/tree @inexor-game/treeclient @inexor-game/types @inexor-game/loader @inexor-ui/ui-flex",
     "start": "node server/index.js",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
@@ -38,6 +38,7 @@
     "@inexor-game/entities": "file:src/entities",
     "@inexor-game/instances": "file:src/instances",
     "@inexor-game/interfaces": "file:src/interfaces",
+    "@inexor-game/loader": "file:src/loader",
     "@inexor-game/logger": "file:server/util/logger",
     "@inexor-game/logging": "file:src/logging",
     "@inexor-game/media": "file:src/media",
@@ -47,6 +48,7 @@
     "@inexor-game/treeclient": "file:src/treeclient",
     "@inexor-game/types": "file:src/types",
     "@inexor-ui/flex": "file:interfaces/ui-flex",
+    "@inexor-ui/ui-flex": "file:interfaces/ui-flex",
     "circular-json": "^0.3.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
