--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -7,6 +7,7 @@ type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
 autostart = false
+autoconnect = true
 autorestart = false
 enet_port = 31415
 
@@ -15,4 +16,5 @@ type = "client"
 name = "Default production client"
 description = "Badly Configurated Clients Inc. proudly presents your first Inexor Client"
 autostart = true
+autoconnect = true
 autorestart = true
