[RENAME] Update GitHub organisation name

--- a/src/context/package.json
+++ b/src/context/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inexor-game/flex.git"
+    "url": "git+https://github.com/inexorgame/flex.git"
   },
   "keywords": [
     "inexor"
@@ -13,9 +13,9 @@
   "author": "The Inexor Team",
   "license": "Zlib",
   "bugs": {
-    "url": "https://github.com/inexor-game/flex/issues"
+    "url": "https://github.com/inexorgame/flex/issues"
   },
-  "homepage": "https://github.com/inexor-game/flex#readme",
+  "homepage": "https://github.com/inexorgame/flex#readme",
   "engines": {
     "node": ">=6.9.1"
   },
