--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "interfaces/ui-console"]
 	path = interfaces/ui-console
-	url = https://github.com/inexor-game/ui-console.git
+	url = https://github.com/inexorgame/ui-console.git
 [submodule "interfaces/ui-client-interface"]
 	path = interfaces/ui-client-interface
-	url = https://github.com/inexor-game/ui-client-interface.git
+	url = https://github.com/inexorgame/ui-client-interface.git
 [submodule "interfaces/ui-client-hud"]
 	path = interfaces/ui-client-hud
-	url = https://github.com/inexor-game/ui-client-hud.git
+	url = https://github.com/inexorgame/ui-client-hud.git
 [submodule "interfaces/ui-flex"]
 	path = interfaces/ui-flex
-	url = https://github.com/inexor-game/ui-flex.git
+	url = https://github.com/inexorgame/ui-flex.git
