--- a/config/devenv/interfaces.toml
+++ b/config/devenv/interfaces.toml
@@ -6,16 +6,16 @@
 name = "Inexor Web Console"
 description = "The Inexor Web Console is a web interface for the Inexor Flex command line API. Within the game client the Inexor Web Console rendered on a transparent layer in front of the game."
 path = console
-repository = https://github.com/inexor-game/ui-console.git
+repository = https://github.com/inexorgame/ui-console.git
 
 [interfaces.ui-client-interface]
 name = "Inexor Web Interface"
 description = "The web user interface used in the Inexor Core Client."
 path = client-interface
-repository = https://github.com/inexor-game/ui-client-interface.git
+repository = https://github.com/inexorgame/ui-client-interface.git
 
 [interfaces.ui-flex]
 name = "The Flex user interface"
 description = "The flex user interface used for managing flex"
 path = ui-flex
-repository = https://github.com/inexor-game/ui-flex.git
+repository = https://github.com/inexorgame/ui-flex.git
