--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inexor-game/flex.git"
+    "url": "git+https://github.com/inexorgame/flex.git"
   },
   "keywords": [
     "inexor",
@@ -25,9 +25,9 @@
   "author": "The Inexor Team",
   "license": "Zlib",
   "bugs": {
-    "url": "https://github.com/inexor-game/code/issues"
+    "url": "https://github.com/inexorgame/code/issues"
   },
-  "homepage": "https://github.com/inexor-game/flex#readme",
+  "homepage": "https://github.com/inexorgame/flex#readme",
   "engines": {
     "node": ">=6.9.1"
   },
