--- a/server/api/package.json
+++ b/server/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inexor-game/flex.git"
+    "url": "git+https://github.com/inexorgame/flex.git"
   },
   "keywords": [
     "inexor",
@@ -15,9 +15,9 @@
   "author": "The Inexor Team",
   "license": "Zlib",
   "bugs": {
-    "url": "https://github.com/inexor-game/code/issues"
+    "url": "https://github.com/inexorgame/code/issues"
   },
-  "homepage": "https://github.com/inexor-game/flex#readme",
+  "homepage": "https://github.com/inexorgame/flex#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0"
