--- a/server/util/logger/package.json
+++ b/server/util/logger/package.json
@@ -7,16 +7,16 @@
   "license": "Zlib",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inexor-game/flex.git"
+    "url": "git+https://github.com/inexorgame/flex.git"
   },
   "keywords": [
     "inexor",
     "path"
   ],
   "bugs": {
-    "url": "https://github.com/inexor-game/flex/issues"
+    "url": "https://github.com/inexorgame/flex/issues"
   },
-  "homepage": "https://github.com/inexor-game/flex#readme",
+  "homepage": "https://github.com/inexorgame/flex#readme",
   "engines": {
     "node": ">=6.9.1"
   },
