--- a/src/instances/package.json
+++ b/src/instances/package.json
@@ -6,9 +6,9 @@
   "author": "The Inexor Team",
   "license": "Zlib",
   "bugs": {
-    "url": "https://github.com/inexor-game/code/issues"
+    "url": "https://github.com/inexorgame/code/issues"
   },
-  "homepage": "https://github.com/inexor-game/flex#readme",
+  "homepage": "https://github.com/inexorgame/flex#readme",
   "engines": {
     "node": ">=6.9.1"
   },
