--- a/config/devenv/logging.toml
+++ b/config/devenv/logging.toml
@@ -14,6 +14,10 @@ level = "warn"
 
 level = "info"
 
+[logging.flex.instances.Connector]
+
+level = "debug"
+
 [logging.flex.profiles.ProfileManager]
 
 level = "warn"
