Using the LogManager for Inexor Core instances
* Added possibility to create a logger using stream definition
* Provide logging configuration
* Provide TOML configuration for server instances

--- a/config/client/logging.toml
+++ b/config/client/logging.toml
@@ -21,3 +21,11 @@ level = "warn"
 [logging.flex.profiles.ProfileManager]
 
 level = "info"
+
+[logging.core.client.31414]
+
+level = "info"
+
+[logging.core.client.31417]
+
+level = "info"
