Use websockets for synchronizing the inexor tree nodes

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "circular-json": "^0.3.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
+    "express-ws": "^3.0.0",
     "figlet": "^1.2.0",
     "npid": "^0.4.0",
     "portscanner": "^2.1.1",
