--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "node server/index.js --profile=devenv",
     "server": "node server/index.js --profile=server",
     "shell": "node inexor shell",
-    "build-ui-flex": "cd interfaces/ui-flex && npm run build"
+    "build-ui-flex": "cd interfaces/ui-flex && npm run build",
+    "build-ui-client-hud": "cd interfaces/ui-client-hud && npm run build"
   },
   "repository": {
     "type": "git",
