[documentation] Update README.md - add instructions - make WebUserManager a bit more verbose - add IntellJ to gitignore - add config variables to package.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.9.0",
   "description": "Scripting environment for Inexor.",
   "scripts": {
-    "postinstall": "npm install @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/entities @inexor-game/gameclient @inexor-game/gameserver @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/logging @inexor-game/media @inexor-game/path @inexor-game/profiles @inexor-game/tree @inexor-game/treeclient @inexor-game/types @inexor-game/loader",
-    "start": "node server/index.js",
+    "reinstall": "npm install @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/entities @inexor-game/gameclient @inexor-game/gameserver @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/logging @inexor-game/media @inexor-game/path @inexor-game/profiles @inexor-game/tree @inexor-game/treeclient @inexor-game/types @inexor-game/loader",
+    "start": "node server/index.js --hostname $npm_package_config_hostname --port $npm_package_config_port --level $npm_package_config_loglevel --ingorepid $npm_package_config_ignorepid",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
     "test": "mocha $(find . -not -iwholename '*node_modules*' -iwholename '*test*' -name '*.js')",
@@ -13,9 +13,10 @@
     "dev": "node server/index.js --profile=devenv",
     "server": "node server/index.js --profile=server",
     "shell": "node inexor shell",
-    "build-ui-flex": "cd interfaces/ui-flex && npm run build",
-    "build-ui-client-hud": "cd interfaces/ui-client-hud && npm run build",
-    "build-ui-console": "cd interfaces/ui-console && npm run build"
+    "build": "npm run build:ui-flex",
+    "build:ui-flex": "cd interfaces/ui-flex && npm run build",
+    "build:ui-client-hud": "cd interfaces/ui-client-hud && npm run build",
+    "build:ui-console": "cd interfaces/ui-console && npm run build"
   },
   "repository": {
     "type": "git",
@@ -78,5 +79,11 @@
     "minami": "^1.1.1",
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0"
+  },
+  "config": {
+    "port": "31416",
+    "hostname": "localhost",
+    "loglevel": "info",
+    "ignorepid": false
   }
 }
