--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,9 @@ build/Release
 node_modules
 jspm_packages
 
-# Optional npm cache directory
+# Optional npm cache directory and yarn
 .npm
+yarn.lock
 
 # Optional REPL history
 .node_repl_history
@@ -43,3 +44,4 @@ jspm_packages
 /.project
 /.settings
 /.tern-project
+.iea
