[releases] Squash all the bugs from the reference implementation - use adm-zip instead unzip - update goals in README

--- a/src/releases/package.json
+++ b/src/releases/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/inexorgame/inexor-flex#readme",
   "dependencies": {
-    "follow-redirects": "^1.2.3",
-    "unzip": "^0.1.11"
+    "adm-zip": "^0.4.7",
+    "follow-redirects": "^1.2.3"
   }
 }
