[package] Don't override arguments but rather use profile in config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scripting environment for Inexor.",
   "scripts": {
     "reinstall": "npm install @inexor-game/api @inexor-game/console @inexor-game/context @inexor-game/entities @inexor-game/gameclient @inexor-game/gameserver @inexor-game/instances @inexor-game/interfaces @inexor-game/logger @inexor-game/logging @inexor-game/media @inexor-game/path @inexor-game/profiles @inexor-game/tree @inexor-game/treeclient @inexor-game/types @inexor-game/releases",
-    "start": "node server/index.js --hostname $npm_package_config_hostname --port $npm_package_config_port --level $npm_package_config_loglevel --ingorepid $npm_package_config_ignorepid",
+    "start": "node server/index.js --profile  $npm_package_config_profile",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
     "test": "mocha $(find . -not -iwholename '*node_modules*' -iwholename '*test*' -name '*.js')",
@@ -81,9 +81,6 @@
     "mocha-junit-reporter": "^1.13.0"
   },
   "config": {
-    "port": "31416",
-    "hostname": "localhost",
-    "loglevel": "info",
-    "ignorepid": false
+    "profile": "client"
   }
 }
