--- a/src/tree/package.json
+++ b/src/tree/package.json
@@ -20,10 +20,5 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "private": true,
-  "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1"
-  }
+  "private": true
 }
