[refactor] Temporarily remove/disable segfault-handler because it requires node-gyp

--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -7,7 +7,7 @@ type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
 autostart = false
-autoconnect = true
+autoconnect = false
 autorestart = false
 enet_port = 31415
 
@@ -15,6 +15,6 @@ enet_port = 31415
 type = "client"
 name = "Default production client"
 description = "Badly Configurated Clients Inc. proudly presents your first Inexor Client"
-autostart = true
-autoconnect = true
-autorestart = true
+autostart = false
+autoconnect = false
+autorestart = false
