[refactor] Rename @inexor-game prefix to @inexorgame

--- a/server/api/package.json
+++ b/server/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inexor-game/api",
+  "name": "@inexorgame/api",
   "version": "1.0.0",
   "description": "The Flex API",
   "main": "index.js",
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/inexorgame/code/issues"
   },
-  "homepage": "https://github.com/inexorgame/flex#readme",
+  "homepage": "https://github.com/inexorgame/inexor-flex#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0"
