--- a/src/releases/package.json
+++ b/src/releases/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inexor-game/releases",
+  "name": "@inexorgame/releases",
   "version": "0.0.1",
   "description": "A release downloader for inexor-core",
   "main": "index.js",
