--- a/server/util/path/package.json
+++ b/server/util/path/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@inexor-game/path",
+  "name": "@inexorgame/path",
   "version": "1.0.0",
   "description": "Common Inexor Paths",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inexorgame/flex.git"
+    "url": "git+https://github.com/inexorgame/inexor-flex.git"
   },
   "keywords": [
     "inexor",
@@ -14,9 +14,9 @@
   "author": "The Inexor Team",
   "license": "Zlib",
   "bugs": {
-    "url": "https://github.com/inexorgame/flex/issues"
+    "url": "https://github.com/inexorgame/inexor-flex/issues"
   },
-  "homepage": "https://github.com/inexorgame/flex#readme",
+  "homepage": "https://github.com/inexorgame/inexor-flex#readme",
   "engines": {
     "node": ">=6.9.1"
   },
