--- a/src/gameserver/package.json
+++ b/src/gameserver/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@inexor-game/gameserver",
+  "name": "@inexorgame/gameserver",
   "version": "1.0.0",
   "description": "Gameserver management",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inexorgame/flex.git"
+    "url": "git+https://github.com/inexorgame/inexor-flex.git"
   },
   "keywords": [
     "inexor"
@@ -13,9 +13,9 @@
   "author": "The Inexor Team",
   "license": "Zlib",
   "bugs": {
-    "url": "https://github.com/inexorgame/flex/issues"
+    "url": "https://github.com/inexorgame/inexor-flex/issues"
   },
-  "homepage": "https://github.com/inexorgame/flex#readme",
+  "homepage": "https://github.com/inexorgame/inexor-flex#readme",
   "engines": {
     "node": ">=6.9.1"
   },
